minor project name refactoring

--- a/MoneyCalculator.Test/MoneyCalculator.Test.csproj
+++ b/MoneyCalculator.Test/MoneyCalculator.Test.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MoneyCalculator\MoneyCalculator.csproj" />
+    <ProjectReference Include="..\MoneyCalculator\MoneyCalculator.Library.csproj" />
   </ItemGroup>
 
 </Project>
